tests/ui/bitxor.stderr
error[E0277]: the trait bound `std::array::IntoIter<({integer}, {integer}), 2>: SortedDisjoint` is not satisfied
 --> tests/ui/bitxor.rs:7:23
  |
7 |     let _c = a.bitxor(b);
  |                ------ ^ the trait `SortedDisjoint` is not implemented for `std::array::IntoIter<({integer}, {integer}), 2>`
  |                |
  |                required by a bound introduced by this call
  |
  = help: the following other types implement trait `SortedDisjoint`:
            BitOrIter<T, I>
            DynSortedDisjoint<'a, T>
            NotIter<T, I>
            Ranges<'_, T>
            itertools::tee::Tee<I>
            range_set_int::sorted_disjoint_from_iter::SortedDisjointWithLenSoFar<T, I>
note: required by a bound in `range_set_int::SortedDisjointIterator::bitxor`
 --> src/lib.rs
  |
  |         J: Iterator<Item = Self::Item> + SortedDisjoint + Sized,
  |                                          ^^^^^^^^^^^^^^ required by this bound in `range_set_int::SortedDisjointIterator::bitxor`
